--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,26 @@
 language: ruby
 
+env:
+  global:
+  - CC_TEST_REPORTER_ID=416b19ab3b6daec890c1c9e63c1d2e67eb255292671bce9037252861ac0bdb4a
+
 rvm:
-  - "2.4.0"
-  - "2.5.0"
+- "2.4.0"
+- "2.5.0"
 
 notifications:
   email: false
 
-before_install:
-  - gem install bundler
+before_script:
+- curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+- chmod +x ./cc-test-reporter
+- ./cc-test-reporter before-build
 
-script: bundle exec rspec
+before_install:
+- gem install bundler
+
+script:
+- bundle exec rspec
+
+after_script: 
+- ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
