--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,4 @@
-inherit_from: .rubocop_todo.yml
-
-# require: rubocop-rspec
+require: rubocop-rspec
 
 inherit_gem:
   rentacop: rentacop.yml
@@ -9,3 +7,36 @@ AllCops:
   TargetRubyVersion: 2.6.0
   Exclude:
     - 'debug.rb'
+
+# === RSpec
+
+# Allow using `describe` with anything
+RSpec/DescribeClass:
+  Enabled: false
+
+# The examples spec is special, it is allowed to be longer
+RSpec/ExampleLength:
+  Exclude:
+    - 'spec/mister_bin/xamples_spec.rb'
+
+# The examples spec is special, it is allowed to use `it 'works'`
+RSpec/ExampleWording:
+  Exclude:
+    - 'spec/mister_bin/xamples_spec.rb'
+
+# Prefer `receive` over `have_received` spies
+RSpec/MessageSpies:
+  EnforcedStyle: receive
+
+# Allow multiple `expect` statements
+RSpec/MultipleExpectations:
+  Max: 4
+
+# Allow stubbing inner methods of the subject under test
+RSpec/SubjectStub:
+  Enabled: false
+
+# Allow deeper nested blocks
+RSpec/NestedGroups:
+  Max: 4
+
