--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,20 +3,14 @@ require:
   - rubocop-performance
 
 inherit_gem:
-  rentacop: rentacop.yml
+  rentacop:
+    - rentacop.yml
+    - rspec.yml
 
 AllCops:
-  TargetRubyVersion: 2.6.0
+  TargetRubyVersion: 2.6
   Exclude:
     - 'debug.rb'
-
-# === RSpec
-
-# Allow using `describe` with any string in some cases
-RSpec/DescribeClass:
-  Exclude:
-    - spec/mister_bin/integration_spec.rb
-    - spec/mister_bin/xamples_spec.rb
 
 # The examples spec is special, it is allowed to be longer
 RSpec/ExampleLength:
@@ -27,20 +21,3 @@ RSpec/ExampleLength:
 RSpec/ExampleWording:
   Exclude:
     - 'spec/mister_bin/xamples_spec.rb'
-
-# Prefer `receive` over `have_received` spies
-RSpec/MessageSpies:
-  EnforcedStyle: receive
-
-# Allow multiple `expect` statements
-RSpec/MultipleExpectations:
-  Max: 4
-
-# Allow stubbing inner methods of the subject under test
-RSpec/SubjectStub:
-  Enabled: false
-
-# Allow deeper nested blocks
-RSpec/NestedGroups:
-  Max: 4
-
