--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-/tmp
-/spec/tmp
+*.gem
+/.yardoc
 /coverage
+/debug.rb
 /dev
 /doc
-/gems
 /Gemfile.lock
-/.yardoc
+/gems
+/spec/tmp
+/tmp
 /toc.txt
-/debug.rb
-*.gem
+/spec/status.txt
