--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      matrix: { ruby: ['3.1', '3.2', '3.3', '3.4'] }
+      matrix: { ruby: ['3.2', '3.3', '3.4', 'head'] }
 
     steps:
     - name: Checkout code
