allow ruby head tests to fail

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      matrix: { ruby: ['3.2', '3.3', '3.4', 'head'] }
+      matrix:
+        ruby: ['3.2', '3.3', '3.4', 'head']
+        include:
+        - ruby: head
+          allow_failure: true
+    
+    continue-on-error: ${{ matrix.allow_failure == true }}
 
     steps:
     - name: Checkout code
